Add css for scroll

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,19 @@
 }
 
 /* Custom Scroll Bar */
-
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0);        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 0, 0);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+  
+  }
 body{
     background: var(--text-color);
     color: var(--bg-color);
